Tweaks styles for mobile, fix to related news stories and overflow on ipu--content block to fix side-scrolling issues on mobile.

--- a/web/themes/ipu/src/sass/block/_block.scss
+++ b/web/themes/ipu/src/sass/block/_block.scss
@@ -1168,19 +1168,21 @@ a.btn {
   }
 
   .group-related {
-    margin: 0 -15px;
+    //margin: 0 -15px;
     background-color: $light;
     padding: 20px 0;
-    & .field__label {
+    // Immediate div is bounded
+    & > div {
+      @extend .container;
+    }
+    .field__label {
       @extend h2;
       font-weight: $font-weight-light !important;
       border-bottom: 1px solid $secondary;
       margin: 30px 0;
     }
-    & > div {
-      @extend .container;
-      .field__item .views-element-container > div {
-        @extend .row;
+    .field__item {
+      .views-element-container {
         .views-row {
           @extend .col-lg-4;
           @extend .col-md-6;
@@ -1900,6 +1902,9 @@ a.btn {
           .field-node-title-theme-description {
             margin-left: calc( 40px + 1rem );
             font-size: $font-size-md;
+            @include media-breakpoint-down(sm) {
+              font-size: $font-size-sm;
+            }
           }
         }
       }
